video-js.css
/* 
VideoJS Default Styles (http://videojs.com)
Version 1.1.4

REQUIRED STYLES (be careful overriding)
================================================================================ */

/* Box containing video, controls, and download links.
   If you want to add some kind of frame or special positioning, use another containing element, not video-js-box. */
.video-js-box { text-align: left; position: relative; vertical-align: bottom; } /* Will be set to the width of the video element */

/* Video Element */
video.video-js { background-color: #000; position: relative; }

/* Poster Style */
.video-js-box img.vjs-poster { display: block; position: absolute; left: 0; top: 0; width: 100%; height: 100%; margin: 0; cursor: pointer; }
/* Subtiles Style */
.video-js-box .vjs-subtitles { color:#fff; font-size: 20px; text-align: center; bottom: 20px; left: 0; right: 0; position: absolute; z-index: 1004; }

/* Fullscreen styles for main elements */
.video-js-box.vjs-fullscreen { position: fixed; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; z-index: 1000; }
.video-js-box.vjs-fullscreen video.video-js { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1001; }
.video-js-box.vjs-fullscreen img.vjs-poster { z-index: 1002; }
.video-js-box.vjs-fullscreen ul.vjs-controls { z-index: 1003; }

/* Styles Loaded Check */
.vjs-styles-check { height: 5px; z-index: -1; }

/* DEFAULT SKIN (override in another file)
================================================================================
Using all CSS to draw the controls. Images could be used if desired.
Instead of editing this file, I recommend creating your own skin CSS file to be included after this file,
so you can upgrade to newer versions easier. */

/* Controls Layout
   Using a Holy Grail type method to allow the progress bar holder to expand into all available space,
   but using abosolute positioning for individual controls. http://www.alistapart.com/articles/holygrail */
.video-js-box ul.vjs-controls {
  list-style: none; position: absolute; margin: 0; border: none; opacity: 0.85; color: #fff;
  display: none; /* Start hidden */
  left: 0; right: 0; /* 100% width of video-js-box */
  height: 35px; /* Including any margin you want above or below control items */
  padding-left: 35px; /* Width of play button + margin */
  padding-right: 165px; /* Width of all the controls to the right of the progress control + margins */
  padding-top: 0; padding-bottom: 0;
}
/* Controls styles when below the video */
.video-js-box.vjs-controls-below ul.vjs-controls { background-color: #000; }

.video-js-box ul.vjs-controls > li { /* Direct li children of control bar */
  position: absolute; list-style: none; float: left; padding: 0; text-align: center;
  height: 25px; /* Default height of individual controls */
  margin: 5px 0 0 0; /* Top margin to put space between video and controls when controls are below */

  /* CSS Background Gradients */
  /* Default */ background-color: #0B151A;
  /* Webkit  */ background: #1F3744 -webkit-gradient(linear, left top, left bottom, from(#0B151A), to(#1F3744)) left 12px;
  /* Firefox */ background: #1F3744 -moz-linear-gradient(top,  #0B151A,  #1F3744) left 12px;

  /* CSS Curved Corners */
  border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px;

  /* CSS Shadows */
  box-shadow: 1px 1px 2px #000; -webkit-box-shadow: 1px 1px 2px #000; -moz-box-shadow: 1px 1px 2px #000;
}

/* Placement of Control Items */
ul.vjs-controls > li.vjs-play-control       { width: 25px; left: 5px; }
ul.vjs-controls > li.vjs-progress-control   { width: 100%; position: relative; }
ul.vjs-controls > li.vjs-time-control       { width: 75px; right: 90px; }
ul.vjs-controls > li.vjs-volume-control     { width: 50px; right: 35px; }
ul.vjs-controls > li.vjs-fullscreen-control { width: 25px; right: 5px; }

/* Removing curves on progress control and time control to join them. */
ul.vjs-controls > li.vjs-progress-control {
  border-top-right-radius: 0; -webkit-border-top-right-radius: 0; -moz-border-radius-topright: 0;
  border-bottom-right-radius: 0; -webkit-border-bottom-right-radius: 0; -moz-border-radius-bottomright: 0;
}
ul.vjs-controls > li.vjs-time-control { 
  border-top-left-radius: 0; -webkit-border-top-left-radius: 0; -moz-border-radius-topleft: 0;
  border-bottom-left-radius: 0; -webkit-border-bottom-left-radius: 0; -moz-border-radius-bottomleft: 0;
}

/* Play/Pause
-------------------------------------------------------------------------------- */
li.vjs-play-control { cursor: pointer !important; }
li.vjs-play-control span { display: block; font-size: 0; line-height: 0; }
li.vjs-play-control.vjs-play span {
  width: 0; height: 0; margin: 8px 0 0 8px;
  /* Drawing the play triangle with borders - http://www.infimum.dk/HTML/slantinfo.html */
  border-left: 10px solid #fff; /* Width & Color of play icon */
  /* Height of play icon is total top & bottom border widths. Color is transparent. */
  border-top: 5px solid rgba(0,0,0,0); border-bottom: 5px solid rgba(0,0,0,0);
}
li.vjs-play-control.vjs-pause span {
  width: 3px; height: 10px; margin: 8px auto 0;
  /* Drawing the pause bars with borders */
  border-top: 0px; border-left: 3px solid #fff; border-bottom: 0px; border-right: 3px solid #fff;
}

/* Progress
-------------------------------------------------------------------------------- */
ul.vjs-progress-holder { /* Box containing play and load progresses */
  position: relative; list-style: none; padding: 0; overflow:hidden; cursor: pointer !important;
  height: 9px; border: 1px solid #777;
  margin: 7px 1px 0 5px; /* Placement within the progress control item */
  border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px;
}
ul.vjs-progress-holder li { /* Progress Bars */
  position: absolute; display: block; width: 0; height: 9px; margin: 0; padding: 0; list-style: none;
  border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px;
}
/* ... */

